# gp-control-center

./: .gitignore  README.md  pnpm-lock.yaml
.bat/: build.bat
.github/workflow/: build.yml
.github/workflows/: build.yml  main.yml
.sh/: .xinitrc  build.sh  cm4_init.sh  start.sh
client/: electron-builder.yml  electron.vite.config.ts  package.json  pnpm-lock.yaml  tsconfig.web.json
client/src/main/: index.ts  server.ts
client/src/preload/: index.d.ts  index.ts
client/src/renderer/: App.tsx  index.html  main.tsx  screen.ts  ws.ts
client/src/renderer/apps/: index.ts
client/src/renderer/apps/Bluetooth/: index.tsx
client/src/renderer/apps/Camera/: index.tsx
client/src/renderer/apps/Joystick/: index.tsx
client/src/renderer/apps/Test/: index.tsx
client/src/renderer/apps/Wifi/: index.tsx
client/src/renderer/assets/: base.css  iconfont.js
client/src/renderer/components/: base.tsx
client/src/renderer/launcher/: app.ts  render.tsx  state.ts
client/src/renderer/mods/app/: index.ts  index.tsx  render.tsx  state.tsx
client/src/renderer/mods/launcher/: app.ts  render.tsx  state.ts  state.tsx
client/src/renderer/mods/prompt/: index.ts  (+2 more)
client/src/renderer/state/: launcher.ts
client/src/renderer/tools/: base.tsx  foucs.ts  gamepad.ts  keyboard.ts  listener.ts  screen.ts  state.ts  style.ts
server/: Cargo.toml
server/src/: client.rs  event.rs  main.rs  port.rs
src/main/: index.ts
src/renderer/: App.tsx  main.tsx  screen.ts
src/renderer/assets/: base.css
src/renderer/components/: Versions.tsx
src/renderer/tools/: gamepad.ts  listener.ts
