[package]
name = "control-center-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-mutex = "1.4.0"
axum= {version = "0.7.5", features = ["ws"]}
futures = "0.3.30"
once_cell = "1.19.0"
tokio = { version = "1.0", features = ["full"] }
uuid = {version = "1.8.0", features = ["v4","fast-rng","macro-diagnostics",]}
